# libsocket_vendor

./: CMakeLists.txt  package.xml  test_client.cpp  test_server.cpp
libsocket-master/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt  libsocketConfig.cmake  libsocketTargets.cmake
libsocket-master/C/: Makefile  cmake_install.cmake
libsocket-master/C++/: Makefile  cmake_install.cmake
libsocket-master/headers/: Makefile  cmake_install.cmake
